duniverse/cstruct.5.1.1/ppx_test/errors/cstruct_unknown_type.ml
[%%cstruct
  type t =
  { a : uint9_t
  }
[@@little_endian]
]
