duniverse/cstruct.5.1.1/ppx_test/errors/cstruct_unknown_type.ml.expected
File "cstruct_unknown_type.ml", line 3, characters 4-15:
Error: ppx_cstruct: Unknown type uint9_t
